--- a/pages/index.qmd
+++ b/pages/index.qmd
@@ -89,41 +89,41 @@ ggplot() +
   # Left hand side
   # Text label "ThisYr Emissions"
   annotate("text", label = paste0(currentYear, " emissions"),
-           x= 0, y = 0, hjust = 1.55, vjust = -6.1, colour = "white", size = 5) +
+           x = 0, y = 0, hjust = 1.55, vjust = -6.1, colour = "white", size = 5) +
   # Text label "MTCO₂e"
   annotate("text", label = expression("MtCO"[2]*"e"),
-           x= 0, y = 0, hjust = 2.6, vjust = -3.4, colour = "white", size = 5) +
+           x = 0, y = 0, hjust = 2.6, vjust = -3.4, colour = "white", size = 5) +
   # Text label value of emissions in current year
   annotate("text", label = co2Compare$`Emission`[co2Compare$EmissionYear == currentYear],
-           x= 0, y = 0, hjust = 3.25, vjust = -1.9, colour = "white", size = 7, fontface = "bold") +
+           x = 0, y = 0, hjust = 3.25, vjust = -1.9, colour = "white", size = 7, fontface = "bold") +
   # Text label "LastYr-ThisYr % Change"
   annotate("text", label = paste0(currentYear-1, "-", currentYear, " % Change"),
-           x= 0, y = 0, hjust = 1.1, vjust = 0, colour = green, size = 6) +
+           x = 0, y = 0, hjust = 1.1, vjust = 0, colour = green, size = 6) +
   # Text label % change value from last year
   annotate("text", label = paste0(pctCO2Equiv,"%"),
-           x= 0, y = 0, hjust = 4.2, vjust = 3, colour = "white", size = 7) +
+           x = 0, y = 0, hjust = 4.2, vjust = 3, colour = "white", size = 7) +
   # Text label "1990-ThisYr % Change"
   annotate("text", label = paste0("1990-", currentYear, " % Change"),
-           x= 0, y = 0, hjust = 1.1, vjust = 7.0, colour = green, size = 6) +
+           x = 0, y = 0, hjust = 1.1, vjust = 7.0, colour = green, size = 6) +
   # Text label % change value from 1990
   annotate("text", label = paste0(pctCO2Equiv_1990,"%"),
-           x= 0, y = 0, hjust = 3.15, vjust = 8.9, colour = "white", size = 7) +
+           x = 0, y = 0, hjust = 3.15, vjust = 8.9, colour = "white", size = 7) +
   # Right hand side
   # Text label "ThisYr Emissions"
   annotate("text", label = paste0(currentYear, " emissions"),
-           x= 0, y = 0, hjust = -0.55, vjust = -6.1, colour = "white", size = 5) +
+           x = 0, y = 0, hjust = -0.55, vjust = -6.1, colour = "white", size = 5) +
   # Text label "MTCO₂e"
   annotate("text", label = expression("MtCO"[2]*"e"),
-           x= 0, y = 0, hjust = -1.6, vjust = -3.4, colour = "white", size = 5) +
+           x = 0, y = 0, hjust = -1.6, vjust = -3.4, colour = "white", size = 5) +
   # Text label value of emissions in current year
   annotate("text", label = co2Compare$CO2[co2Compare$EmissionYear == currentYear],
-           x= 0, y = 0, hjust = -2.3, vjust = -1.9, colour = "white", size = 7, fontface = "bold") +
+           x = 0, y = 0, hjust = -2.3, vjust = -1.9, colour = "white", size = 7, fontface = "bold") +
   # Text label "LastYr-ThisYr % Change"
   annotate("text", label = paste0(currentYear-1, "-", currentYear, " % Change"),
-           x= 0, y = 0, hjust = -0.2, vjust = 0, colour = blue, size = 6) +
+           x = 0, y = 0, hjust = -0.2, vjust = 0, colour = blue, size = 6) +
   # Text label % change value from last year
   annotate("text", label = paste0(pctCO2,"%"),
-           x= 0, y = 0, hjust = -3.2, vjust = 3, colour = "white", size = 7) +
+           x = 0, y = 0, hjust = -3.2, vjust = 3, colour = "white", size = 7) +
   # Text label "1990-ThisYr % Change"
   annotate("text", label = paste0("1990-", currentYear, " % Change"),
            x= 0, y = 0, hjust = -0.2, vjust = 7.0, colour = blue, size = 6) +
@@ -142,17 +142,17 @@ ggplot() +
            x= 0, y = 0, hjust = -0.8, vjust = -8.8, colour = blue, angle = 0, size = 6) +
   # dashboard/images inserted and positioned
   inset_element(p = readPNG(greenCloud, native = TRUE),
-                left = 0.05, bottom = 0.55, right = 0.45, top = 0.8, on_top = FALSE) +
+                left = 0.18, bottom = 0.55, right = 0.45, top = 0.8, on_top = FALSE) +
   inset_element(p = readPNG(greenArrow1, native = TRUE),
-                left = 0.05, bottom = 0.28, right = 0.45, top = 0.48, on_top = FALSE) +
+                left = 0.18, bottom = 0.28, right = 0.45, top = 0.48, on_top = FALSE) +
   inset_element(p = readPNG(greenArrow2, native = TRUE),
-                left = 0.05, bottom = 0.02, right = 0.45, top = 0.22, on_top = FALSE) +
+                left = 0.18, bottom = 0.02, right = 0.45, top = 0.22, on_top = FALSE) +
   inset_element(p = readPNG(blueCloud, native = TRUE),
-                left = 0.55, bottom = 0.55, right = 0.95, top = 0.8, on_top = FALSE) +
+                left = 0.55, bottom = 0.55, right = 0.82, top = 0.8, on_top = FALSE) +
   inset_element(p = readPNG(blueArrow1, native = TRUE),
-                left = 0.55, bottom = 0.28, right = 0.95, top = 0.48, on_top = FALSE) +
+                left = 0.55, bottom = 0.28, right = 0.82, top = 0.48, on_top = FALSE) +
   inset_element(p = readPNG(blueArrow2, native = TRUE),
-                left = 0.55, bottom = 0.02, right = 0.95, top = 0.22, on_top = FALSE)
+                left = 0.55, bottom = 0.02, right = 0.82, top = 0.22, on_top = FALSE)
 ```
 
 ### Column {width=33%}
@@ -221,21 +221,21 @@ ggplot() +
            x = 0, y = 0, hjust = -2.4, vjust = 4.5, colour = "white", size = 11, fontface = "bold") +
   # dashboard/images inserted and positioned
   inset_element(p = readPNG(blueCloud, native = TRUE),
-                left = 0.05, bottom = 0.72, right = 0.35, top = 1, on_top = FALSE) +
+                left = 0.12, bottom = 0.72, right = 0.42, top = 1, on_top = FALSE) +
   inset_element(p = readPNG(greenCloud, native = TRUE),
-                left = 0.07, bottom = 0.45, right = 0.33, top = 0.72, on_top = FALSE) +
+                left = 0.14, bottom = 0.45, right = 0.4, top = 0.72, on_top = FALSE) +
   inset_element(p = readPNG(darkBlueCloud, native = TRUE),
-                left = 0.09, bottom = 0.29, right = 0.31, top = 0.45, on_top = FALSE) +
+                left = 0.16, bottom = 0.29, right = 0.38, top = 0.45, on_top = FALSE) +
   inset_element(p = readPNG(lightBlueCloud, native = TRUE),
-                left = 0.11, bottom = 0.15, right = 0.29, top = 0.29, on_top = FALSE) +
+                left = 0.18, bottom = 0.15, right = 0.36, top = 0.29, on_top = FALSE) +
   inset_element(p = readPNG(blueCloudReverse, native = TRUE),
-                left = 0.65, bottom = 0.72, right = 0.95, top = 1, on_top = FALSE) +
+                left = 0.58, bottom = 0.72, right = 0.88, top = 1, on_top = FALSE) +
   inset_element(p = readPNG(greenCloudReverse, native = TRUE),
-                left = 0.67, bottom = 0.45, right = 0.93, top = 0.72, on_top = FALSE) +
+                left = 0.6, bottom = 0.45, right = 0.86, top = 0.72, on_top = FALSE) +
   inset_element(p = readPNG(darkBlueCloudReverse, native = TRUE),
-                left = 0.69, bottom = 0.29, right = 0.91, top = 0.45, on_top = FALSE) +
+                left = 0.62, bottom = 0.29, right = 0.84, top = 0.45, on_top = FALSE) +
   inset_element(p = readPNG(lightBlueCloudReverse, native = TRUE),
-                left = 0.71, bottom = 0.15, right = 0.89, top = 0.29, on_top = FALSE)
+                left = 0.64, bottom = 0.15, right = 0.82, top = 0.29, on_top = FALSE)
 ```
 
 ## Row
@@ -255,9 +255,9 @@ ggplot() +
   annotate("text", label = "emissions in NI.", 
            x = 0, y = 0, hjust = 0.1, vjust = -0.8, colour = "white", size = 7, fontface = "bold") +
   annotate("text", label = bquote(.(pfG$`Emission`[pfG$EmissionYear == PfGBaselineYear]) ~ "MtCO"[2] * "e Baseline" ~ .(PfGBaselineYear)), 
-           x = 0, y = 0, hjust = 0.4, vjust = 6, colour = "white", size = 8, fontface = "bold") +
+           x = 0, y = 0, hjust = 0.4, vjust = 6.3, colour = "white", size = 8, fontface = "bold") +
   annotate("text", label = bquote(.(pfG$`Emission`[pfG$EmissionYear == currentYear]) ~ "MtCO"[2] * "e" ~ .(currentYear)), 
-           x = 0, y = 0, hjust = 0.25, vjust = 7.2, colour = "white", size = 8, fontface = "bold") +
+           x = 0, y = 0, hjust = 0.25, vjust = 7.5, colour = "white", size = 8, fontface = "bold") +
   annotate("text", label = pfgText1, 
            x = 0, y = 0, hjust = -7, vjust = -9, colour = "white", size = 6) +
   annotate("text", label = pfgText2, 
@@ -269,7 +269,7 @@ ggplot() +
 ### Column {width=33%}
 
 ```{r}
-#| title: EMISSIONS BY SECTOR 2022
+#| title: EMISSIONS BY SECTOR currentYear
 
 plot_ly(hometreemapdf,
          type = "treemap",
@@ -292,7 +292,7 @@ plot_ly(hometreemapdf,
 ### Column {width=33%}
 
 ```{r}
-#| title: CHANGE IN EMISSIONS BY SECTOR FROM BASE YEAR-2022 (KtCO2e)
+#| title: CHANGE IN EMISSIONS BY SECTOR FROM BASE YEAR-currentYear (KtCO&#8322;e)
 
 plot_ly(
   type = "table",
@@ -322,3 +322,14 @@ plot_ly(
     config(displaylogo = FALSE)
 
 ```
+
+## Row {.hidden}
+
+<script>
+window.onload = function () {
+  card_titles = document.getElementsByClassName("card-title");
+  for (let i = 0; i < card_titles.length; i ++) {
+    card_titles[i].textContent = card_titles[i].textContent.replace("currentYear", "`r currentYear`")
+  }
+}
+</script>
