--- a/pages/building-and-product-uses.qmd
+++ b/pages/building-and-product-uses.qmd
@@ -1,5 +1,8 @@
 ---
 title: Building and product uses
+include-in-header:
+  text: |
+    <script src = "base-in-slider.js"></script>
 ---
 
 ```{r setup}
